<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_camera_calib</name>
  <version>1.0.0</version>
  <description>ROS 2 Livox lidar-camera calibration tools</description>
  <maintainer email="ycj1@hku.hk">ycj</maintainer>

  <license>GPL-2.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libceres-dev</depend>
  <depend>livox_ros_driver2</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
